--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "1.15.2",
     "bootstrap": "3.3.7",
+    "client-sessions": "0.7.0",
     "cors": "2.8.0",
     "express": "4.14.0",
     "http": "0.0.0",
