--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "2.8.0",
     "express": "4.14.0",
     "http": "0.0.0",
-    "jquery": "3.1.0"
+    "jquery": "3.1.0",
+    "jsonfile": "2.3.1"
   }
 }
