--- a/file sys server/config.json
+++ b/file sys server/config.json
@@ -13,5 +13,7 @@
 		"activeDuration": 300000,
 		"httpOnly": true,
 		"secure": true
-	}
+	},
+
+	"directory": "C:/Users/wildc/Documents/matt 13th grade"
 }
