--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "body-parser": "1.15.2",
     "bootstrap": "3.3.7",
     "client-sessions": "0.7.0",
+    "cookies": "^0.6.2",
     "cors": "2.8.0",
     "express": "4.14.0",
     "http": "0.0.0",
     "jquery": "3.1.0",
-    "jsonfile": "2.3.1"
+    "jsonfile": "2.3.1",
+    "socket.io": "^1.7.1"
   }
 }
