--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "http": "0.0.0",
     "jquery": "3.1.0",
     "jsonfile": "2.3.1",
-    "socket.io": "^1.7.1"
+    "socket.io": "^1.7.1",
+    "socket.io-client": "1.7.2"
   }
 }
